# dx-heroes-task

./: README.md  pyproject.toml
applifting_sdk/: config.py
applifting_sdk/auth/: token_manager.py
applifting_sdk/exceptions/: __init__.py
applifting_sdk/helpers/: uuid_serializer.py
applifting_sdk/http/: async_client.py
applifting_sdk/models/: auth.py
applifting_sdk/resources/: offers.py
examples/: demo.py
models/: auth.py  offer.py  product.py
src/applift_sdk/: __init__.py  client.py
src/applift_sdk/auth/: __init__.py  token_manager.py
src/applift_sdk/examples/: demo.py
src/applift_sdk/exceptions/: __init__.py  api_exceptions.py
src/applift_sdk/helpers/: uuid_serializer.py
src/applift_sdk/http/: __init__.py  async_client.py
src/applift_sdk/models/: __init__.py  auth.py  offer.py  product.py  validation.py
src/applift_sdk/resources/: __init__.py  offers.py  products.py
src/applifting_sdk/: __init__.py  client.py  config.py
src/applifting_sdk/auth/: __init__.py  async_token_manager.py  sync_token_manager.py  token_manager.py
src/applifting_sdk/examples/: demo.py
src/applifting_sdk/exceptions/: __init__.py  api_exceptions.py
src/applifting_sdk/helpers/: __init__.py  error_handler.py  uuid_serializer.py
src/applifting_sdk/http/: __init__.py  async_client.py  sync_client.py
src/applifting_sdk/models/: __init__.py  offer.py  product.py  validation.py
src/applifting_sdk/resources/: __init__.py  offers.py  products.py
src/tests/: conftest.py  fixtures.py
src/tests/auth/: test_async_token_manager.py  test_sync_token_manager.py  test_token_manager.py
src/tests/auth/token_manager/: test_init.py  test_read_token_cache.py  test_refresh_token_request.py
src/tests/test_auth/: test_async_token_manager.py  test_sync_token_manager.py
src/tests/test_client/: __init__.py  test_applifting_sdk_client.py  test_async_applifting_sdk_client.py
src/tests/test_config/: test_config.py
src/tests/test_exceptions/: __init__.py  test_api_exceptions.py
src/tests/test_helpers/: test_error_handler.py  test_uuid_serializer.py
src/tests/test_http/: __init__.py  test_async_client.py  test_sync_client.py
src/tests/test_models/: test_auth_models.py  test_offer_models.py  test_product_models.py  test_validation_models.py
src/tests/test_resources/: __init__.py  test_async_offers_api.py  test_async_products_api.py  test_offers_api.py  test_products_api.py  test_sync_offers_api.py  test_sync_products_api.py
