[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "applifting-sdk"
version = "0.1.0"
description = "A Python SDK for the Applifting Offers API."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Illya Miloserdov", email = "illya@miloserdov.cz" }
]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=1.10.0",
    "python-dotenv>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]


[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = [
    "-ra -q -s -p no:warnings",
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/venv/*",
    "src/applifting_sdk/__init__.py",
    "src/applifting_sdk/auth/__init__.py",
    "src/applifting_sdk/exceptions/__init__.py",
    "src/applifting_sdk/helpers/__init__.py",
    "src/applifting_sdk/http/__init__.py",
    "src/applifting_sdk/models/__init__.py",
    "src/applifting_sdk/resources/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
