[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "applifting-sdk-1llyaa"
version = "1.0.2"
description = "A Python SDK for the Applifting Offers API."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Illya Miloserdov", email = "illya@miloserdov.cz" }
]
license = { text = "MIT" }
keywords = ["applifting", "sdk", "api"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

# Core dependencies - only what your package actually needs
dependencies = [
    "httpx>=0.25.0",
    "requests>=2.32.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "platformdirs>=4.3.8",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "coverage[toml]>=7.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

# Testing only
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "coverage[toml]>=7.0.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.25.0",
    "requests>=2.32.0"
]

[project.urls]
Homepage = "https://github.com/1llyaa/dx-heroes-task/"
Repository = "https://github.com/1llyaa/dx-heroes-task/"
Issues = "https://github.com/1llyaa/dx-heroes-task/issues"
Documentation = "https://github.com/1llyaa/dx-heroes-task#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

# Ruff configuration (linting + formatting)
[tool.ruff]
target-version = "py313"
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

# Ruff formatter configuration
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["PLR2004", "S101", "TID252"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
testpaths = ["tests", "src/tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "asyncio: marks tests as async tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "auth: Tests related to authentication and token management",
    "http: Tests related to HTTP client functionality",
    "models: Tests related to data models and validation",
    "resources: Tests related to API resources (offers, products)",
    "exceptions: Tests related to exception handling",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "src/applifting_sdk/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug:",
    "if settings\\.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
    "pass",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"